<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_activity_title">
    <PreferenceCategory android:title="@string/preference_category_title">
        <EditTextPreference
            android:defaultValue="@string/def_max_res"
            android:inputType="numberDecimal"
            android:key="@string/key_max_res"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:title="@string/menu_settings_max_results" />

        <ListPreference
            android:defaultValue="@string/def_order_by"
            android:entries="@array/settings_order_by"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/key_order_by"
            android:title="@string/menu_settings_sort_by" />

        <EditTextPreference
            android:defaultValue="@string/def_min_mag"
            android:inputType="numberDecimal"
            android:key="@string/key_min_mag"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:title="@string/menu_settings_min_mag" />
    </PreferenceCategory>
</PreferenceScreen>