<?xml version="1.0" encoding="utf-8"?>

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <RadioButton

        android:id="@+id/radio_button_max_min_mag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:text="@string/menu_mag_des" />

    <RadioButton
        android:id="@+id/radio_button_min_max_mag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:text="@string/menu_mag_as" />

    <RadioButton
        android:id="@+id/radio_button_lasts_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:text="@string/menu_settings_last_first" />
</RadioGroup>